# zero

./: Cargo.toml  README.md
migrations/: 20221102223821_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
