[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[dev-dependencies]
reqwest = "0.11.12"
